Fix link text wrap issue without no-wrap, and make card padding responsive

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,6 @@
 
  a {
      text-decoration: none;
-     width: fit-content;
  }
 
  body {
@@ -23,19 +22,13 @@
      margin: 0;
  }
 
- .flex-container {
-     align-items: center;
-     display: flex;
-     height: 100%;
-     justify-content: center;
- }
 
  .links {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      text-align: center;
-     white-space: nowrap;
+     width: 100%;
  }
 
  .links a {
@@ -45,13 +38,22 @@
     font-size: 0.875rem;
     font-weight: 700;
     line-height: 150%;
-    padding: 0.75rem 6rem;
-    width: clamp(17.44rem, 74vw, 19rem);
+    padding: 0.75rem 0;
+    width: 100%;
  }
 
  .links a:hover {
     background-color: #C4F82A;
     color: #333333;
+ }
+
+ .main-container {
+     align-items: center;
+     container-type: inline-size;
+     container-name: card-padding-mobile;
+     display: flex;
+     height: 100%;
+     justify-content: center;
  }
 
  .name-location {
@@ -84,11 +86,12 @@
      flex-grow: 1;
      flex-shrink: 1;
      gap: 1.5rem;
-     height: clamp(36.2rem, 71vh, 38.2rem);
      justify-content: center;
+     max-height: 38.2rem;
      max-width: 24rem;
      padding: 1.5rem;
-     width: clamp(20.44rem, 24rem, 24rem);
+     text-align: center;
+     width: 100%;
  }
 
  .profile-card img {
@@ -102,4 +105,10 @@
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 150%;
+ }
+
+ @container card-padding-mobile (min-width: 600px) {
+        .profile-card {
+            padding: 2.5rem;
+        }
  }
